--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,20 +15,25 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp"
+        android:gravity="center"
         tools:context=".ui.home.HomeActivity">
 
         <TextView
+            android:textColor="@color/black"
+            android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text='@{"Halo, selamat datang " + user.name}'
-            tools:text="Halo, selamat datang Marshanda" />
+            tools:text="Halo, selamat datang Hisame" />
 
         <Button
             android:id="@+id/btn_logout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
             android:layout_marginTop="16dp"
-            android:text="Logout" />
+            android:text="Logout"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/dark_tosca"/>
 
     </LinearLayout>
 
