--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <variable
             name="user"
             type="com.example.coreandroid.data.room.user.User" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="16dp"
+        android:padding="24dp"
         android:gravity="center"
         tools:context=".ui.home.HomeActivity">
 
         <TextView
             android:textColor="@color/black"
-            android:textSize="20dp"
+            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text='@{"Halo, selamat datang " + user.name}'
@@ -33,6 +32,15 @@
             android:layout_marginTop="16dp"
             android:text="Logout"
             android:textColor="@color/white"
+            android:backgroundTint="@color/dark_tosca"/>
+
+        <Button
+            android:id="@+id/btn_setting"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:onClick="onClick"
+            android:text="Setting"
             android:backgroundTint="@color/dark_tosca"/>
 
     </LinearLayout>
