--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="enableBiometric"
+            type="Boolean" />
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+        <variable
+            name="hasBiometric"
+            type="Boolean" />
+
+        <import type="android.view.View"/>
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp"
+        android:padding="25dp"
         tools:context=".ui.login.LoginActivity">
 
         <TextView
@@ -15,7 +26,7 @@
             android:layout_height="wrap_content"
             android:text="Welcome to MyFriend!"
             android:textStyle="italic"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/et_phone"
@@ -42,21 +53,31 @@
             android:layout_marginTop="20dp"
             android:textColor="@color/white"/>
 
+        <Button
+            android:id="@+id/btn_loginWithBiometric"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="@color/dark_tosca"
+            android:text="Login With Biometric"
+            android:textColor="@color/white" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:text="Don't have an account, Sign in now!"/>
 
         <Button
             android:id="@+id/btn_sign_in"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sign In"
-            android:layout_marginTop="15dp"
+            android:text="Sign Up"
+            android:layout_marginTop="10dp"
             android:backgroundTint="@color/dark_tosca"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:onClick="onClick"/>
 
     </LinearLayout>
 </layout>
