--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="user"
             type="com.example.coreandroid.data.room.user.User" />
@@ -24,8 +25,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textStyle="bold"
                 android:text='@{"Halo, selamat datang " + user.name}'
+                android:textStyle="bold"
                 tools:text="Halo, selamat datang Hisame" />
 
         </LinearLayout>
@@ -39,17 +40,17 @@
                 android:id="@+id/btn_setting"
                 android:layout_width="115dp"
                 android:layout_height="wrap_content"
-                android:text="Setting"
-                android:layout_marginTop="15dp"
                 android:layout_marginStart="20dp"
-                android:backgroundTint="@color/dark_tosca"/>
+                android:layout_marginTop="15dp"
+                android:backgroundTint="@color/dark_tosca"
+                android:text="Setting" />
 
             <Button
                 android:id="@+id/btn_logout"
                 android:layout_width="115dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
                 android:layout_marginStart="75dp"
+                android:layout_marginTop="15dp"
                 android:backgroundTint="@color/dark_tosca"
                 android:text="Logout" />
 
@@ -64,6 +65,18 @@
             android:imeOptions="actionSearch"
             android:maxLines="1"
             android:singleLine="true" />
+
+        <Spinner
+            android:id="@+id/sp_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/filter_school" />
+
+        <CheckBox
+            android:id="@+id/cb_sort"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Urutkan Dari Likes Terbanyak" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_friend"
