--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -22,7 +22,9 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="250dp"/>
+                android:layout_height="250dp"
+                app:image='@{data.image}'
+                app:imageThumbnail='@{data.resizeIimage}'/>
 
             <TextView
                 android:layout_width="wrap_content"
